--- a/src/datepicker/Datepicker.css
+++ b/src/datepicker/Datepicker.css
@@ -96,3 +96,14 @@ display: inline-block;
     position: relative;
     display: inline-block;
 }
+
+
+.monthsdiv{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    
+}
+
+.monthdiv{
+
+}
