--- a/src/datepicker/Datepicker.css
+++ b/src/datepicker/Datepicker.css
@@ -107,3 +107,12 @@ display: inline-block;
 .monthdiv{
 
 }
+
+.yeardiv {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.activeyear {
+    font-weight: bold;
+}
