--- a/src/datepicker/Datepicker.css
+++ b/src/datepicker/Datepicker.css
@@ -1,9 +1,9 @@
 
 
-.form-control {
+.datepickerinput {
     display: block;
     width: 100%;
-    padding: 0.375rem 0.75rem;
+    
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -14,6 +14,7 @@
     border: var(--bs-border-width) solid var(--bs-border-color);
     border-radius: var(--bs-border-radius);
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    padding: 0.375rem 1.75rem 0.375rem 0.75rem
 }
 
 
@@ -167,4 +168,8 @@ display: inline-block;
 
 .curserpointer {
   cursor: pointer;
+}
+
+.bi-calendar4-week::before {
+    background-color: white;
 }
